--- a/PornTokF/PornTokF/Views/feed.xaml
+++ b/PornTokF/PornTokF/Views/feed.xaml
@@ -11,7 +11,11 @@
             <Grid.BindingContext>
                 <vm:RecomendViewModel/>
             </Grid.BindingContext>
-            <CarouselView IsBounceEnabled="True" ItemsSource="{Binding Photos}" Loop="False" CurrentItem="{Binding CurrentItem, Mode=OneWayToSource}" ItemTemplate="{StaticResource Photo}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <CarouselView Grid.RowSpan="2" IsBounceEnabled="True" ItemsSource="{Binding Photos}" Loop="False" CurrentItem="{Binding CurrentItem, Mode=OneWayToSource}" ItemTemplate="{StaticResource Photo}">
                 <CarouselView.ItemsLayout>
                     <LinearItemsLayout
                         Orientation="Vertical" 
@@ -19,10 +23,21 @@
                         SnapPointsType="MandatorySingle" />
                 </CarouselView.ItemsLayout>
             </CarouselView>
+            <Label TextColor="White" HeightRequest="50" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="30">
+                <Label.Background>
+                    <LinearGradientBrush EndPoint="0, 1" StartPoint="0, 0">
+                        <GradientStop Color="#A000"/>
+                        <GradientStop Color="#0000" Offset="1"/>
+                    </LinearGradientBrush>
+                </Label.Background>
+                <Label.Text>
+                    Рекомендации
+                </Label.Text>
+            </Label>
         </Grid>
     </ContentPage>
 
-    <!--Random-->
+    <!--Subscribe-->
     <ContentPage>
         <!--<StackLayout>
             <Label>https://rule34.xxx/index.php?page=tags&s=list&sort=asc&order_by=type&pid=103200</Label>
@@ -33,14 +48,31 @@
                 <vm:SubscribeViewModel/>
             </Grid.BindingContext>
             <RefreshView Command="{Binding Refresh}" IsRefreshing="{Binding IsRefreshing}">
-                <CarouselView ItemsSource="{Binding Photos}" Loop="False" ItemTemplate="{StaticResource Photo}">
-                    <CarouselView.ItemsLayout>
-                        <LinearItemsLayout
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="70"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <CarouselView Grid.RowSpan="2" ItemsSource="{Binding Photos}" Loop="False" ItemTemplate="{StaticResource Photo}">
+                        <CarouselView.ItemsLayout>
+                            <LinearItemsLayout
                         Orientation="Vertical" 
                         SnapPointsAlignment="Start" 
                         SnapPointsType="MandatorySingle" />
-                    </CarouselView.ItemsLayout>
-                </CarouselView>
+                        </CarouselView.ItemsLayout>
+                    </CarouselView>
+                    <Label TextColor="White" HeightRequest="50" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="30">
+                        <Label.Background>
+                            <LinearGradientBrush EndPoint="0, 1" StartPoint="0, 0">
+								<GradientStop Color="#A000"/>
+								<GradientStop Color="#0000" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Label.Background>
+                        <Label.Text>
+                            Подписки
+                        </Label.Text>
+                    </Label>
+                </Grid>
             </RefreshView>
         </Grid>
     </ContentPage>
