--- a/PornTokF/PornTokF/Views/LoginPage.xaml
+++ b/PornTokF/PornTokF/Views/LoginPage.xaml
@@ -2,12 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:vlc="clr-namespace:LibVLCSharp.Forms.Shared;assembly=LibVLCSharp.Forms"
+             xmlns:o="clr-namespace:Octane.Xamarin.Forms.VideoPlayer;assembly=Octane.Xamarin.Forms.VideoPlayer" 
+             xmlns:roxv="clr-namespace:Rox;assembly=Rox.Xamarin.Video.Portable" 
+             xmlns:mm="clr-namespace:MediaManager.Forms;assembly=MediaManager.Forms" 
+             xmlns:video="clr-namespace:Xam.Forms.VideoPlayer;assembly=Xam.Forms.VideoPlayer" 
+             xmlns:video1="clr-namespace:Vpl.Xamarin.VideoPlayer;assembly=Vpl.Xamarin.VideoPlayer"
              mc:Ignorable="d"
              x:Class="PornTokF.Views.LoginPage"
              Shell.NavBarIsVisible="False"
-             Background="black"  Padding="0,0,0,-200">
+             Background="black"  Padding="0,0,0,0">
     <ContentPage.Content>
-        <Label Text="Скоро..." TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+        <StackLayout>
+        <o:VideoPlayer HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="420" HeightRequest="800" FillMode="ResizeAspect" Repeat="True" AutoPlay="True" Source="https://unowebm.rule34.xxx//images/4126/b077f11e3936e2a932dd4254aebf9ca9.mp4?4686243"/>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
