--- a/PornTokF/PornTokF/Views/LoginPage.xaml
+++ b/PornTokF/PornTokF/Views/LoginPage.xaml
@@ -1,16 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<CarouselPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:porntokf="clr-namespace:PornTokF"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
               mc:Ignorable="d"
              x:Class="PornTokF.Views.LoginPage"
-             Shell.NavBarIsVisible="False"
              Background="black"  Padding="0,0,0,0">
-    <ContentPage Background="White">
-        <Label Text="123" TextColor="Aqua"/>
-    </ContentPage>
-    <ContentPage>
-        <porntokf:ZoomImage Source="https://wimg.rule34.xxx/images/4162/d9de634a1ff32acdca514c413ca1686b.jpeg"/>
-    </ContentPage>
-</CarouselPage>
+</ContentPage>
