--- a/PornTokF/PornTokF/Views/LoginPages/Likes.xaml
+++ b/PornTokF/PornTokF/Views/LoginPages/Likes.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:PornTokF.ViewModels"
-             x:Class="PornTokF.Views.LoginPages.Likes">
+             x:Class="PornTokF.Views.LoginPages.Likes" Background="Black">
     <ContentPage.BindingContext>
         <viewmodels:LikesPageViewModel/>
     </ContentPage.BindingContext>
