--- a/PornTokF/PornTokF/Views/find.xaml
+++ b/PornTokF/PornTokF/Views/find.xaml
@@ -33,9 +33,9 @@
                            Unfocused="findEntry_Unfocused"
                            TextChanged="findEntry_TextChanged" 
                            />
-                    <Button Grid.Row="1" HorizontalOptions="End" Text="Найти" Command="{Binding Find}" TextColor="White"/>
+                    <Button Grid.Row="1" HorizontalOptions="End" Text="Найти" Command="{Binding Find}" TextColor="White" Clicked="Button_Clicked"/>
                 </Grid>
-                <ScrollView Orientation="Vertical" Scrolled="OnScrolled" Grid.Row="1">
+                <ScrollView x:Name="ImageScrollView" Orientation="Vertical" Scrolled="OnScrolled" Grid.Row="1">
                     <StackLayout>
                         <FlexLayout Wrap="Wrap" JustifyContent="SpaceBetween" BindableLayout.ItemsSource="{Binding Photos}">
                             <BindableLayout.ItemTemplate>
